tests/adhoc/nullness/existing/negative.next.bsl

tests\adhoc\nullness\existing\negative.fs(8,17): error FS0001: The type '(int * int)' does not have 'null' as a proper value

tests\adhoc\nullness\existing\negative.fs(10,17): error FS0001: The type 'int list' does not have 'null' as a proper value
